# rustpanel

./: .env.example  .gitignore  ESTADO_IMPLEMENTACAO.md  LIMPEZA_UDP_CAPTURE.md  PROBLEMAS_E_SOLUCOES.md  PROJECT_CONTEXT.md  README.md  build-and-push.ps1  build-and-push.sh  build-and-push.sh.bak  deploy-vps.sh
.agent/: ARCHITECTURE.md
.agent/agents/: backend-specialist.md  database-architect.md  frontend-specialist.md  orchestrator.md  project-planner.md  security-auditor.md
.agent/rules/: GEMINI.md
.agent/skills/react-best-practices/: SKILL.md
.agent/skills/refactoring-patterns/: SKILL.md
.agent/skills/supabase-standards/: SKILL.md  functions-security.md  grants-and-roles.md  migration-patterns.md  security-hardening.md
.github/workflows/: docker-build.yml
agent/: .env.example  Dockerfile  package-lock.json  package.json
agent/src/: config.ts  index.ts
agent/src/parsers/: hbbr-parser.ts  hbbs-parser.ts
agent/src/readers/: docker-logs.ts  sqlite-reader.ts
deploy/: stack-local.yml  stack.yml
deploy/supabase/: 001_initial_schema.sql  002_cleanup_and_diagnostics.sql  003_diagnostico.sql  004_reset_all.sql  005_rollback.sql  006_fix_dashboard_rls.sql  007_fix_ipmap.sql  008_fix_session_correlation.sql
docs/: INSTALLATION.md  SCHEMA.md  UPDATE_BACKUP.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
rustpanel-udp-capture/: Cargo.toml  Dockerfile
rustpanel-udp-capture/src/: config.rs  main.rs  parser.rs  supabase.rs
(+26 files in other folders)
