[package]
name = "rustpanel-udp-capture"
version = "0.1.0"
edition = "2021"
description = "UDP packet capture for RustDesk HBBS peer detection"
license = "MIT"

[dependencies]
# Packet capture
pnet = { version = "0.35", features = ["std"] }
# Async runtime
tokio = { version = "1.38", features = ["full"] }
# HTTP client for Supabase (pin to avoid idna_adapter edition2024 issue)
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip"] }
# Config from env
config = "0.14"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Bytes handling
bytes = "1.5"
# Metrics (optional)
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Pin hashbrown to avoid edition2024 issue in newer Cargo
hashbrown = "0.14"

# Pin idna to avoid pulling hashbrown 0.17
idna = "0.5"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1